# hallucination-detection-probing

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.ci/: README.md  ci.yml
scripts/: demo_synthetic.py
src/: __init__.py  evaluate.py  train.py
src/data/: generate_responses.py  label_factuality.py
src/features/: build_features.py  extract_activations.py
src/intervention/: realtime_firewall.py  suppression_hook.py
src/models/: classifiers.py  ensemble.py
tests/: test_smoke.py
